Add shortcut to move pane to each 4 side

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,3 +11,9 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+# Move pane to the far right/left/bottom/top like vim's C-w + H/J/K/L
+bind H splitw -fhb \; swapp -t ! \; killp -t !
+bind L splitw -fh  \; swapp -t ! \; killp -t !
+bind J splitw -fv  \; swapp -t ! \; killp -t !
+bind K splitw -fvb \; swapp -t ! \; killp -t !
