--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,7 @@
 set-option -g prefix C-q
 set-window-option -g window-status-current-style bg=red
+set-window-option -g mouse on
+set-window-option -g base-index 1
 set escape-time 300
 
 bind -r C-h resize-pane -L
