--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,7 @@ set-option -g prefix C-q
 set-window-option -g window-status-current-style bg=red
 set-window-option -g mouse on
 set-window-option -g base-index 1
+set-window-option -g pane-base-index 1
 set escape-time 300
 
 bind -r C-h resize-pane -L
@@ -19,3 +20,7 @@ bind H splitw -fhb \; swapp -t ! \; killp -t !
 bind L splitw -fh  \; swapp -t ! \; killp -t !
 bind J splitw -fv  \; swapp -t ! \; killp -t !
 bind K splitw -fvb \; swapp -t ! \; killp -t !
+
+# Open panes in current directory
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
