--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
 set-option -g prefix C-q
+set-window-option -g mode-keys vi
 set-window-option -g window-status-current-style bg=red
 set-window-option -g mouse on
 set-window-option -g base-index 1
