--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -20,5 +20,6 @@
             "filetypes": ["go"],
             "rootPatterns": ["go.mod"]
         }
-    }
+    },
+    "snippets.ultisnips.pythonPrompt": false
 }
