--- a/alacritty.yml
+++ b/alacritty.yml
@@ -3,15 +3,15 @@ env:
   TERM: xterm-256color
 
 font:
-  # normal:
-  # family: "MesloLGMDZ Nerd Font Mono"
-  # bold:
-  # family: "MesloLGMDZ Nerd Font Mono"
-  # style: Bold
-  # italic:
-  # family: "MesloLGMDZ Nerd Font Mono"
-  # style: Italic
-  size: 14.0
+  normal:
+    family: "JetBrainsMono Nerd Font Mono"
+  bold:
+    family: "JetBrainsMono Nerd Font Mono"
+    style: Bold
+  italic:
+    family: "JetBrainsMono Nerd Font Mono"
+    style: Italic
+  size: 14
 
 draw_bold_text_with_bright_colors: true
 
@@ -122,9 +122,13 @@ key_bindings:
   - { key: Key4, mods: Command, chars: "\x11\x34" }
   - { key: Key5, mods: Command, chars: "\x11\x35" }
   - { key: Key6, mods: Command, chars: "\x11\x36" }
-  - { key: Key7, mods: Command, chars: "\x11\x36" }
-  - { key: Key8, mods: Command, chars: "\x11\x37" }
+  - { key: Key7, mods: Command, chars: "\x11\x37" }
+  - { key: Key8, mods: Command, chars: "\x11\x38" }
   - { key: Key9, mods: Command, chars: "\x11\x39" }
+  - { key: Key0, mods: Command, chars: ". shsheep/shsheep.bash_profile\x0D" }
+  - { key: Equals, mods: Command, chars: "change-font-size.sh -i\x0D" }
+  - { key: Minus, mods: Command, chars: "change-font-size.sh -d\x0D" }
+  # - { key: Key9, mods: Command, chars: "\x11\x39" }
 
   # tmux 옆 윈도우로 이동
   # control + pgdn, control + pgup        C-q p , C-q n
