--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,8 @@ bind -r C-j resize-pane -D
 bind -r C-k resize-pane -U
 bind -r C-l resize-pane -R
 
+bind a setw synchronize-panes on
+bind b setw synchronize-panes off
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
